[gd_scene load_steps=8 format=3 uid="uid://chyt1wxxoph5v"]

[ext_resource type="Script" path="res://scenes/paint_bar.gd" id="1_djux7"]
[ext_resource type="Texture2D" uid="uid://ii1cp2n7ijdt" path="res://assets/paint_sprite/PotionRed.png" id="2_2cj68"]
[ext_resource type="PackedScene" uid="uid://bnqo2wl5b7ayh" path="res://scenes/box_border.tscn" id="2_8cegg"]
[ext_resource type="Texture2D" uid="uid://c4f330o3ptabx" path="res://assets/button_sprite/paint_bar_q.png" id="2_62f1f"]
[ext_resource type="Texture2D" uid="uid://qlw7ehn5177c" path="res://assets/paint_sprite/PotionBlue.png" id="3_hqahh"]
[ext_resource type="Texture2D" uid="uid://bdv67lynhbgex" path="res://assets/paint_sprite/PotionYellow.png" id="4_4hgsx"]
[ext_resource type="Texture2D" uid="uid://c8qyju3ailris" path="res://assets/button_sprite/paint_bar_e.png" id="7_3wqxf"]

[node name="PaintBar" type="Area2D"]
script = ExtResource("1_djux7")

[node name="ArrowQ" type="Area2D" parent="."]
position = Vector2(-260, 0)
scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="ArrowQ"]
texture_filter = 1
texture = ExtResource("2_62f1f")

[node name="RedPaint" type="Area2D" parent="."]
position = Vector2(-145, 0)

[node name="RedBorder" parent="RedPaint" instance=ExtResource("2_8cegg")]
scale = Vector2(2, 2)

[node name="RedSprite" type="Sprite2D" parent="RedPaint"]
texture = ExtResource("2_2cj68")

[node name="BluePaint" type="Area2D" parent="."]

[node name="BlueBorder" parent="BluePaint" instance=ExtResource("2_8cegg")]
scale = Vector2(2, 2)

[node name="BlueSprite" type="Sprite2D" parent="BluePaint"]
texture = ExtResource("3_hqahh")

[node name="YellowPaint" type="Area2D" parent="."]
position = Vector2(145, 0)

[node name="YellowBorder" parent="YellowPaint" instance=ExtResource("2_8cegg")]
scale = Vector2(2, 2)

[node name="YellowSprite" type="Sprite2D" parent="YellowPaint"]
texture = ExtResource("4_4hgsx")

[node name="ArrowE" type="Area2D" parent="."]
position = Vector2(260, 0)
scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="ArrowE"]
texture_filter = 1
texture = ExtResource("7_3wqxf")
